<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AboutPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        app:srcCompat="@drawable/ezyzakat2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:fontFamily="@font/bebasneue"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dip"
        android:fontFamily="@font/patuaone"
        android:text="@string/name1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dip"
        android:fontFamily="@font/patuaone"
        android:text="@string/email1"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dip"
        android:text="@string/name2"
        android:fontFamily="@font/patuaone"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dip"
        android:fontFamily="@font/patuaone"
        android:text="@string/email2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dip"
        android:fontFamily="@font/inconsolata"
        android:text="@string/hyperlink"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:textSize="20sp"
        android:fontFamily="@font/bebasneue"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dip"
        android:layout_marginTop="22dip"
        android:layout_marginRight="32dip"
        android:fontFamily="@font/patuaone"
        android:gravity="center"
        android:text="@string/about_text"
        android:textSize="18sp" />


</RelativeLayout>